<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/my_first_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_name"
        android:id="@+id/usd_tv_name"
        android:textColor="@color/my_main_text_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_lastname"
        android:id="@+id/usd_tv_lastname"
        android:textColor="@color/my_main_text_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_address"
        android:id="@+id/usd_tv_address"
        android:textColor="@color/my_main_text_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_email"
        android:id="@+id/usd_tv_email"
        android:textColor="@color/my_main_text_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_phone"
        android:id="@+id/usd_tv_phone_number"
        android:textColor="@color/my_main_text_background" />
</LinearLayout>